--- a/Ch02_statlearn_lab.ipynb
+++ b/Ch02_statlearn_lab.ipynb
@@ -1977,6 +1977,18 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "#np.random.normal?"
+      ],
+      "metadata": {
+        "id": "BfsNcbaqcYan"
+      },
+      "id": "BfsNcbaqcYan",
+      "execution_count": 73,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "id": "299a5a85",
       "metadata": {
@@ -2167,7 +2179,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 72,
       "id": "9d8074e5",
       "metadata": {
         "execution": {},
@@ -2175,7 +2187,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1ec6119f-ccbd-456f-d318-abea8ab4af75"
+        "outputId": "3a45165a-2124-45e4-e41d-df7ae2781f77"
       },
       "outputs": [
         {
@@ -2337,7 +2349,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 69,
       "id": "fce06849",
       "metadata": {
         "execution": {},
@@ -2345,27 +2357,27 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "08e3b8ef-5bae-488e-9be6-9bea516c4825"
+        "outputId": "e1eb3352-851c-42c5-a0eb-efe0c1a8d073"
       },
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[ 0.22578661, -0.35263079, -0.28128742],\n",
-              "       [-0.66804635, -1.05515055, -0.39080098],\n",
-              "       [ 0.48194539, -0.23855361,  0.9577587 ],\n",
-              "       [-0.19980213,  0.02425957,  1.54582085],\n",
-              "       [ 0.54510552, -0.50522874, -0.18283897],\n",
-              "       [ 0.54052513,  1.93508803, -0.26962033],\n",
-              "       [-0.24355868,  1.0023136 , -0.88645994],\n",
-              "       [-0.29172023,  0.88253897,  0.58035002],\n",
-              "       [ 0.0915167 ,  0.67010435, -2.82816231],\n",
-              "       [ 1.02130682, -0.95964476, -1.66861984]])"
+              "array([[ 0.13257652,  1.16839396, -0.65683749],\n",
+              "       [-0.09227953, -2.55211265, -0.8901139 ],\n",
+              "       [ 1.53633881, -0.68150591, -0.70147682],\n",
+              "       [-1.21790718,  0.57983429,  0.17799016],\n",
+              "       [-1.18686686,  0.66745037,  0.26010588],\n",
+              "       [ 0.75403338, -0.64147951,  1.73800876],\n",
+              "       [ 0.40986761, -0.11688952, -0.51883428],\n",
+              "       [-0.24482737,  0.85879199, -0.26896669],\n",
+              "       [ 1.07814387,  0.58067617,  1.34649517],\n",
+              "       [ 0.81410423, -0.06293927, -1.90933994]])"
             ]
           },
           "metadata": {},
-          "execution_count": 37
+          "execution_count": 69
         }
       ],
       "source": [
