--- a/Ch02_statlearn_lab.ipynb
+++ b/Ch02_statlearn_lab.ipynb
@@ -23,7 +23,7 @@
         "outputId": "c4cea091-ffeb-4566-a40c-95d3319e1c3b"
       },
       "id": "yfNDvC1gWvhd",
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -817,7 +817,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "9e8aa21f",
       "metadata": {
         "execution": {},
@@ -852,7 +852,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "d62ec119",
       "metadata": {
         "execution": {},
@@ -875,7 +875,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "c64e9f4d",
       "metadata": {
         "execution": {},
@@ -917,7 +917,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "9abccc1f",
       "metadata": {
         "execution": {},
@@ -974,7 +974,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "id": "802ca33c",
       "metadata": {
         "execution": {},
@@ -1017,7 +1017,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "id": "a8c72744",
       "metadata": {
         "execution": {},
@@ -1098,7 +1098,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "id": "f1c7d1db",
       "metadata": {
         "execution": {},
@@ -1134,7 +1134,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "e2ea2bfd",
       "metadata": {
         "execution": {},
@@ -1173,7 +1173,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "id": "59fbf9fd",
       "metadata": {
         "execution": {},
@@ -1224,7 +1224,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "id": "2279437e",
       "metadata": {
         "execution": {},
@@ -1279,7 +1279,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "id": "75bf1b1e",
       "metadata": {
         "execution": {},
@@ -1319,7 +1319,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "id": "58292240",
       "metadata": {
         "execution": {},
@@ -1361,7 +1361,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "id": "fc5fff57",
       "metadata": {
         "execution": {},
@@ -1402,7 +1402,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "id": "762562a6",
       "metadata": {
         "execution": {},
@@ -1426,7 +1426,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "id": "66d2b82a",
       "metadata": {
         "execution": {},
@@ -1466,7 +1466,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "id": "89881402",
       "metadata": {
         "execution": {},
@@ -1511,7 +1511,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "id": "0572d3f6",
       "metadata": {
         "execution": {},
@@ -1551,7 +1551,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "id": "33b10a6f",
       "metadata": {
         "execution": {},
@@ -1599,7 +1599,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "id": "a32716db",
       "metadata": {
         "execution": {},
@@ -1654,7 +1654,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "id": "3db6e1cf",
       "metadata": {
         "execution": {},
@@ -1694,7 +1694,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "id": "e15c753f",
       "metadata": {
         "execution": {},
@@ -1737,7 +1737,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "id": "91c6e7d8",
       "metadata": {
         "execution": {},
@@ -1799,7 +1799,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "id": "59d95dce",
       "metadata": {
         "execution": {},
@@ -1825,7 +1825,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "id": "a6fde9af",
       "metadata": {
         "execution": {},
@@ -1871,7 +1871,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "id": "fadb6b45",
       "metadata": {
         "execution": {},
@@ -1910,7 +1910,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "id": "fda3134b",
       "metadata": {
         "execution": {},
@@ -1948,7 +1948,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "id": "52eb335b",
       "metadata": {
         "execution": {},
@@ -1979,13 +1979,14 @@
     {
       "cell_type": "code",
       "source": [
-        "#np.random.normal?"
+        "#np.random.normal?\n",
+        "np.sum?"
       ],
       "metadata": {
         "id": "BfsNcbaqcYan"
       },
       "id": "BfsNcbaqcYan",
-      "execution_count": 73,
+      "execution_count": 75,
       "outputs": []
     },
     {
@@ -2009,7 +2010,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 82,
       "id": "ac5e9d29",
       "metadata": {
         "execution": {},
@@ -2017,27 +2018,27 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a05154cd-a9fd-4b60-91bd-c3d48da43c10"
+        "outputId": "1342a2e9-6058-46d3-c540-ad30c796030f"
       },
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([ 0.3024244 ,  1.12831895, -1.43648522, -1.48787774,  1.40942761,\n",
-              "        0.52063176, -0.22381228,  0.90776649, -0.96047296,  0.02177952,\n",
-              "       -0.14568995, -0.88956324,  0.67053635,  1.46618272, -0.24273108,\n",
-              "       -0.13889458,  1.93057482, -0.12521227, -0.56663857,  0.36135672,\n",
-              "        0.55965539, -2.15259551, -0.77510744,  0.59552039,  0.93696643,\n",
-              "       -0.38428006,  0.86359857,  1.62650376,  0.56709149,  0.06633678,\n",
-              "       -0.39464601,  1.81356581, -0.93592255, -0.07931667,  1.29780259,\n",
-              "       -0.35249923, -1.05401855,  0.52155224,  1.71677636, -1.11224125,\n",
-              "       -1.1337124 ,  1.67319218, -1.02671553, -0.4940095 ,  0.5247122 ,\n",
-              "       -0.90435262, -0.41174683,  0.92227727,  0.98275972,  1.08983257])"
+              "array([ 1.93418929,  0.76566695, -0.91993439,  1.19755107, -1.18044469,\n",
+              "       -0.9347816 ,  2.30499773, -0.90093841,  0.03427534,  0.20587872,\n",
+              "       -2.33471756,  0.5210574 ,  1.10687103, -0.18175304, -0.5257445 ,\n",
+              "        0.67140473,  1.47184587,  0.21943409, -1.15013683,  0.91048822,\n",
+              "        0.30222597,  0.67840581, -0.06093237, -1.11156538,  0.0437044 ,\n",
+              "        0.55873743, -0.69072642, -1.61746766, -1.08183359,  0.39994197,\n",
+              "       -0.44817155, -0.57427497, -0.617967  ,  0.59372114, -2.19455923,\n",
+              "        0.31944041,  1.93011221,  0.01795617,  0.78200544, -0.11411871,\n",
+              "       -2.30016301,  2.41044998, -0.82918641, -0.11289433, -0.24067199,\n",
+              "       -0.68280784,  1.68952754,  1.49315221, -1.18186372,  0.91274206])"
             ]
           },
           "metadata": {},
-          "execution_count": 29
+          "execution_count": 82
         }
       ],
       "source": [
@@ -2057,7 +2058,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 83,
       "id": "55fa905e",
       "metadata": {
         "execution": {},
@@ -2082,7 +2083,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 87,
       "id": "fde0dc19",
       "metadata": {
         "execution": {},
@@ -2090,19 +2091,19 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "239ac20b-08b1-4b86-e983-eac1e87be9db"
+        "outputId": "466b7e9e-fafa-4f20-9219-b40d79f7904a"
       },
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[1.        , 0.76352884],\n",
-              "       [0.76352884, 1.        ]])"
+              "array([[1.        , 0.78110425],\n",
+              "       [0.78110425, 1.        ]])"
             ]
           },
           "metadata": {},
-          "execution_count": 31
+          "execution_count": 87
         }
       ],
       "source": [
@@ -2124,7 +2125,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 91,
       "id": "5099cf54",
       "metadata": {
         "execution": {},
@@ -2133,15 +2134,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8b379a0c-948d-44d8-f425-2303ca886cb9"
+        "outputId": "bced3dfa-6152-421f-9a5c-b435faa7668a"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[-3.83859926  2.13248145]\n",
-            "[ 0.05334997 -4.79482245]\n"
+            "[4.81753308 3.17221814]\n",
+            "[1.09872405 9.6551909 ]\n"
           ]
         }
       ],
@@ -2179,7 +2180,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 72,
+      "execution_count": 92,
       "id": "9d8074e5",
       "metadata": {
         "execution": {},
@@ -2187,7 +2188,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3a45165a-2124-45e4-e41d-df7ae2781f77"
+        "outputId": "06d73c63-4656-4f69-a2ad-63d193e86b99"
       },
       "outputs": [
         {
@@ -2227,7 +2228,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 93,
       "id": "e98472df",
       "metadata": {
         "execution": {},
@@ -2236,7 +2237,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "217dc024-0905-42e4-9256-82061c58785a"
+        "outputId": "6a62445a-aa48-4d1b-cb2d-72e2ce1a0be8"
       },
       "outputs": [
         {
@@ -2247,7 +2248,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 34
+          "execution_count": 93
         }
       ],
       "source": [
@@ -2268,7 +2269,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 94,
       "id": "8c2784fd",
       "metadata": {
         "execution": {},
@@ -2277,7 +2278,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0ee2fdc6-bb73-48fe-9503-3c4757dfa7e5"
+        "outputId": "aeb8cb25-1433-4ee9-8235-8e511482e1e8"
       },
       "outputs": [
         {
@@ -2290,7 +2291,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 35
+          "execution_count": 94
         }
       ],
       "source": [
@@ -2310,7 +2311,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "source": [
+        "np.var?"
+      ],
+      "metadata": {
+        "id": "OEOOvUjvfJ4b"
+      },
+      "id": "OEOOvUjvfJ4b",
+      "execution_count": 95,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 96,
       "id": "7e7205f2",
       "metadata": {
         "execution": {},
@@ -2318,7 +2331,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c3c840ee-4629-47ad-c95a-937e8365fc0d"
+        "outputId": "26d75ecd-b49e-44fe-f971-51fee628eea1"
       },
       "outputs": [
         {
@@ -2329,7 +2342,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 36
+          "execution_count": 96
         }
       ],
       "source": [
@@ -2349,7 +2362,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 69,
+      "execution_count": null,
       "id": "fce06849",
       "metadata": {
         "execution": {},
@@ -2397,7 +2410,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": null,
       "id": "1403ff7a",
       "metadata": {
         "execution": {},
@@ -2435,7 +2448,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": null,
       "id": "7e9255ba",
       "metadata": {
         "execution": {},
@@ -2509,7 +2522,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": null,
       "id": "8236e5f7",
       "metadata": {
         "execution": {},
@@ -2554,7 +2567,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": null,
       "id": "ddc9ed4f",
       "metadata": {
         "execution": {},
@@ -2595,7 +2608,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": null,
       "id": "c64ed600",
       "metadata": {
         "execution": {},
@@ -2648,7 +2661,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": null,
       "id": "bc6245e2",
       "metadata": {
         "execution": {},
@@ -2691,7 +2704,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": null,
       "id": "2454807b",
       "metadata": {
         "execution": {},
@@ -2759,7 +2772,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": null,
       "id": "1e18a793",
       "metadata": {
         "execution": {},
@@ -2803,7 +2816,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": null,
       "id": "aec3f009",
       "metadata": {
         "execution": {},
@@ -2860,7 +2873,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": null,
       "id": "2cbc7fd4",
       "metadata": {
         "execution": {},
@@ -2903,7 +2916,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": null,
       "id": "702f80d9",
       "metadata": {
         "execution": {},
@@ -2961,7 +2974,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": null,
       "id": "5493d229",
       "metadata": {
         "execution": {},
@@ -2986,7 +2999,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": null,
       "id": "bd07af12",
       "metadata": {
         "execution": {},
@@ -3039,7 +3052,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": null,
       "id": "01019508",
       "metadata": {
         "execution": {},
@@ -3083,7 +3096,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": null,
       "id": "7d08992f",
       "metadata": {
         "execution": {},
@@ -3132,7 +3145,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": null,
       "id": "1f89d704",
       "metadata": {
         "execution": {},
@@ -3185,7 +3198,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": null,
       "id": "cd971131",
       "metadata": {
         "execution": {},
@@ -3227,7 +3240,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": null,
       "id": "aa630d16",
       "metadata": {
         "execution": {},
@@ -3270,7 +3283,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": null,
       "id": "89955ee2",
       "metadata": {
         "execution": {},
@@ -3314,7 +3327,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": null,
       "id": "517f592d",
       "metadata": {
         "execution": {},
@@ -3389,7 +3402,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": null,
       "id": "35927abd",
       "metadata": {
         "execution": {},
@@ -3432,7 +3445,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": null,
       "id": "78ee7f5b",
       "metadata": {
         "execution": {},
@@ -3475,7 +3488,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": null,
       "id": "16212696",
       "metadata": {
         "execution": {},
@@ -3516,7 +3529,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
+      "execution_count": null,
       "id": "d5f473d2",
       "metadata": {
         "execution": {},
@@ -3559,7 +3572,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 62,
+      "execution_count": null,
       "id": "c89646d6",
       "metadata": {
         "execution": {},
@@ -3597,7 +3610,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": null,
       "id": "87f6b4f2",
       "metadata": {
         "execution": {},
@@ -3635,7 +3648,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 64,
+      "execution_count": null,
       "id": "5da5bda8",
       "metadata": {
         "execution": {},
