--- a/Quiz_2.ipynb
+++ b/Quiz_2.ipynb
@@ -1221,40 +1221,113 @@
     {
       "cell_type": "code",
       "source": [
-        "# Create a strategy that stops at 3 terms (plus intercept = 4 variables total)\n",
-        "strategy_4var = Stepwise.first_peak(design,\n",
-        "                                    direction='forward',\n",
-        "                                    max_terms=3)  # 3 predictors + intercept\n",
-        "\n",
-        "# Fit using Cp criterion\n",
-        "hitters_Cp_4var = sklearn_selected(OLS,\n",
-        "                                   strategy_4var,\n",
-        "                                   scoring=neg_Cp)\n",
-        "hitters_Cp_4var.fit(Hitters, Y)\n",
-        "\n",
-        "# Get the selected variables\n",
-        "print(\"Best 4-variable model (3 predictors + intercept):\")\n",
-        "print(hitters_Cp_4var.selected_state_)"
+        "D = design.fit_transform(Hitters)\n",
+        "D = D.drop('intercept', axis=1)\n",
+        "X = np.asarray(D)\n",
+        "path = fit_path(X,\n",
+        "                Y,\n",
+        "                max_nonzeros=X.shape[1])\n",
+        "path[4]"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "6vKf6izf6f_Z",
-        "outputId": "8db94b83-de32-436b-cc8d-7153a260e06f"
+        "id": "_O7AyoxqX4LR",
+        "outputId": "2e79d648-f59f-48d5-8cfa-9fde3e6111fa"
       },
-      "id": "6vKf6izf6f_Z",
-      "execution_count": 135,
+      "id": "_O7AyoxqX4LR",
+      "execution_count": 149,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Best 4-variable model (3 predictors + intercept):\n",
-            "('CRBI', 'Hits', 'PutOuts')\n"
+            "Preprocessing Data.\n",
+            "BnB Started.\n",
+            "Iteration: 1. Number of non-zeros:  1\n",
+            "Iteration: 2. Number of non-zeros:  2\n",
+            "Iteration: 3. Number of non-zeros:  2\n",
+            "Iteration: 4. Number of non-zeros:  2\n",
+            "Iteration: 5. Number of non-zeros:  3\n",
+            "Iteration: 6. Number of non-zeros:  3\n",
+            "Iteration: 7. Number of non-zeros:  4\n",
+            "Iteration: 8. Number of non-zeros:  9\n",
+            "Iteration: 9. Number of non-zeros:  9\n",
+            "Iteration: 10. Number of non-zeros:  9\n",
+            "Iteration: 11. Number of non-zeros:  9\n",
+            "Iteration: 12. Number of non-zeros:  9\n",
+            "Iteration: 13. Number of non-zeros:  9\n",
+            "Iteration: 14. Number of non-zeros:  9\n",
+            "Iteration: 15. Number of non-zeros:  9\n",
+            "Iteration: 16. Number of non-zeros:  9\n",
+            "Iteration: 17. Number of non-zeros:  9\n",
+            "Iteration: 18. Number of non-zeros:  17\n",
+            "Iteration: 19. Number of non-zeros:  19\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'B': array([   0.        ,    3.13128866,    0.        ,    0.        ,\n",
+              "           0.        ,    0.        ,    0.        ,    0.        ,\n",
+              "           0.        ,    0.        ,    0.        ,    0.67695124,\n",
+              "           0.        ,    0.        , -137.72478629,    0.        ,\n",
+              "           0.        ,    0.        ,    0.        ]),\n",
+              " 'B0': np.float64(44.77699685800371),\n",
+              " 'lambda_0': np.float64(0.010845435626077676),\n",
+              " 'M': np.float64(0.5829861733382012),\n",
+              " 'Time_exceeded': False}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 149
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0c2cca8c",
+        "outputId": "856c7993-1f52-4108-bc4e-b34c5a381dc9"
+      },
+      "source": [
+        "feature_names = D.columns.tolist()\n",
+        "coefficients = path[4]['B']\n",
+        "\n",
+        "print(\"Non-zero coefficients and their variable names for path[4]:\")\n",
+        "for feature, coef in zip(feature_names, coefficients):\n",
+        "    if coef != 0:\n",
+        "        print(f\"{feature}: {coef:.6f}\")"
+      ],
+      "id": "0c2cca8c",
+      "execution_count": 150,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Non-zero coefficients and their variable names for path[4]:\n",
+            "Hits: 3.131289\n",
+            "CRBI: 0.676951\n",
+            "Division[W]: -137.724786\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "dJra_qs1bwZ4"
+      },
+      "id": "dJra_qs1bwZ4",
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1272,63 +1345,48 @@
     {
       "cell_type": "code",
       "source": [
-        "# First, get the 3 predictors from your best model\n",
-        "best_vars = hitters_Cp_4var.selected_state_\n",
         "\n",
-        "# Fit the OLS model with these variables\n",
-        "X_best = design.transform(Hitters).loc[:, list(best_vars)]\n",
-        "model_best = OLS(Y, X_best).fit()\n",
-        "\n",
-        "# Get the model fit statistics\n",
-        "print(\"Model Fit Statistics for Best 4-Variable Model:\")\n",
-        "print(f\"Adjusted R²: {model_best.rsquared_adj:.6f}\")\n",
-        "print(f\"AIC: {model_best.aic:.6f}\")\n",
-        "print(f\"BIC: {model_best.bic:.6f}\")\n",
-        "print(\"\\nFull Summary:\")\n",
-        "print(model_best.summary())"
+        "selected_vars = [feature for feature, coef in zip(feature_names, coefficients) if coef != 0]\n",
+        "X_selected = design.transform(Hitters).loc[:, selected_vars]\n",
+        "best_model = OLS(Y, X_selected).fit()\n",
+        "print(best_model.summary())"
       ],
       "metadata": {
+        "id": "jhwGuif3cQcB",
+        "outputId": "24349309-6690-4bbc-eba3-d9f45280567a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "3EnzI0Jk7T2X",
-        "outputId": "11de61a8-6a14-40ef-e550-d654e13b28e5"
+        }
       },
-      "id": "3EnzI0Jk7T2X",
-      "execution_count": 136,
+      "id": "jhwGuif3cQcB",
+      "execution_count": 153,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Model Fit Statistics for Best 4-Variable Model:\n",
-            "Adjusted R²: 0.768905\n",
-            "AIC: 3809.910536\n",
-            "BIC: 3820.626998\n",
-            "\n",
-            "Full Summary:\n",
             "                                 OLS Regression Results                                \n",
             "=======================================================================================\n",
             "Dep. Variable:                      y   R-squared (uncentered):                   0.772\n",
             "Model:                            OLS   Adj. R-squared (uncentered):              0.769\n",
-            "Method:                 Least Squares   F-statistic:                              292.7\n",
-            "Date:                Thu, 13 Nov 2025   Prob (F-statistic):                    5.01e-83\n",
-            "Time:                        22:31:28   Log-Likelihood:                         -1902.0\n",
+            "Method:                 Least Squares   F-statistic:                              293.0\n",
+            "Date:                Thu, 13 Nov 2025   Prob (F-statistic):                    4.43e-83\n",
+            "Time:                        22:59:10   Log-Likelihood:                         -1901.8\n",
             "No. Observations:                 263   AIC:                                      3810.\n",
-            "Df Residuals:                     260   BIC:                                      3821.\n",
+            "Df Residuals:                     260   BIC:                                      3820.\n",
             "Df Model:                           3                                                  \n",
             "Covariance Type:            nonrobust                                                  \n",
+            "===============================================================================\n",
+            "                  coef    std err          t      P>|t|      [0.025      0.975]\n",
+            "-------------------------------------------------------------------------------\n",
+            "Hits            3.4057      0.288     11.842      0.000       2.839       3.972\n",
+            "CRBI            0.6964      0.065     10.742      0.000       0.569       0.824\n",
+            "Division[W]  -129.1604     37.777     -3.419      0.001    -203.548     -54.773\n",
             "==============================================================================\n",
-            "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
-            "------------------------------------------------------------------------------\n",
-            "CRBI           0.6665      0.065     10.293      0.000       0.539       0.794\n",
-            "Hits           2.3164      0.318      7.295      0.000       1.691       2.942\n",
-            "PutOuts        0.2614      0.077      3.381      0.001       0.109       0.414\n",
-            "==============================================================================\n",
-            "Omnibus:                      114.300   Durbin-Watson:                   2.008\n",
-            "Prob(Omnibus):                  0.000   Jarque-Bera (JB):              666.384\n",
-            "Skew:                           1.652   Prob(JB):                    1.98e-145\n",
-            "Kurtosis:                      10.063   Cond. No.                         8.59\n",
+            "Omnibus:                      110.025   Durbin-Watson:                   1.893\n",
+            "Prob(Omnibus):                  0.000   Jarque-Bera (JB):              621.594\n",
+            "Skew:                           1.589   Prob(JB):                    1.05e-135\n",
+            "Kurtosis:                       9.828   Cond. No.                         856.\n",
             "==============================================================================\n",
             "\n",
             "Notes:\n",
@@ -1374,11 +1432,11 @@
         "hitters_MSE.selected_state_"
       ],
       "metadata": {
-        "id": "X1oP6X3KVnvI",
-        "outputId": "1a35cc6e-6b1f-43ba-a797-5cbc28b34d81",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "X1oP6X3KVnvI",
+        "outputId": "1a35cc6e-6b1f-43ba-a797-5cbc28b34d81"
       },
       "id": "X1oP6X3KVnvI",
       "execution_count": 142,
@@ -1407,11 +1465,11 @@
         "hitters_MSE.selected_state_"
       ],
       "metadata": {
-        "id": "iPcc1ikyWlHQ",
-        "outputId": "3e0eb78b-d5c5-4e12-c2fa-73f055accda4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "iPcc1ikyWlHQ",
+        "outputId": "3e0eb78b-d5c5-4e12-c2fa-73f055accda4"
       },
       "id": "iPcc1ikyWlHQ",
       "execution_count": 143,
